<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

/**
 * Migración: Crear tabla PQ_PARTES_TIPOS_TAREA
 * 
 * Catálogo de tipos de tarea.
 * - is_generico: Si es true, está disponible para todos los clientes.
 * - is_default: Si es true, es el tipo de tarea predeterminado del sistema.
 * 
 * Regla de negocio: Solo puede existir un TipoTarea con is_default=true.
 * Regla de negocio: Si is_default=true, entonces is_generico=true (forzado).
 * 
 * @see docs/modelo-datos.md
 * @see TR-00(MH)-Generacion-base-datos-inicial.md
 */
return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('PQ_PARTES_TIPOS_TAREA', function (Blueprint $table) {
            $table->id();
            $table->string('code', 50)->comment('Código único del tipo de tarea');
            $table->string('descripcion', 255)->comment('Descripción del tipo de tarea');
            $table->boolean('is_generico')->default(false)->comment('Indica si está disponible para todos los clientes');
            $table->boolean('is_default')->default(false)->comment('Indica si es el tipo de tarea predeterminado');
            $table->boolean('activo')->default(true)->comment('Indica si el tipo está activo');
            $table->boolean('inhabilitado')->default(false)->comment('Indica si el tipo está inhabilitado');
            $table->timestamps();

            // Índice único para code
            $table->unique('code', 'idx_tipos_tarea_code');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('PQ_PARTES_TIPOS_TAREA');
    }
};
